simplebool/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : Term
   4          | LCID Binder

   5  Binder : COLON Type

   6  Type : ArrowType

   7  AType : LPAREN Type RPAREN
   8        | BOOL
   9        | UUNIT

  10  ArrowType : AType ARROW ArrowType
  11            | AType

  12  Term : AppTerm
  13       | LAMBDA LCID COLON Type DOT Term
  14       | LAMBDA USCORE COLON Type DOT Term
  15       | IF Term THEN Term ELSE Term
  16       | LET LCID EQ Term IN Term

  17  AppTerm : ATerm
  18          | AppTerm ATerm

  19  ATerm : LPAREN Term RPAREN
  20        | LCID
  21        | TRUE
  22        | FALSE
  23        | UNIT

  24  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (24)

	UNIT  shift 3
	LET  shift 4
	LAMBDA  shift 5
	IF  shift 6
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 9
	EOF  shift 10
	LPAREN  shift 11
	.  error

	toplevel  goto 12
	Command  goto 13
	Term  goto 14
	AppTerm  goto 15
	ATerm  goto 16


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	ATerm : UNIT .  (23)

	.  reduce 23


state 4
	Term : LET . LCID EQ Term IN Term  (16)

	LCID  shift 17
	.  error


state 5
	Term : LAMBDA . LCID COLON Type DOT Term  (13)
	Term : LAMBDA . USCORE COLON Type DOT Term  (14)

	LCID  shift 18
	USCORE  shift 19
	.  error


state 6
	Term : IF . Term THEN Term ELSE Term  (15)

	UNIT  shift 3
	LET  shift 4
	LAMBDA  shift 5
	IF  shift 6
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 20
	LPAREN  shift 11
	.  error

	Term  goto 21
	AppTerm  goto 15
	ATerm  goto 16


state 7
	ATerm : TRUE .  (21)

	.  reduce 21


state 8
	ATerm : FALSE .  (22)

	.  reduce 22


state 9
	Command : LCID . Binder  (4)
	ATerm : LCID .  (20)

	COLON  shift 22
	UNIT  reduce 20
	TRUE  reduce 20
	FALSE  reduce 20
	LCID  reduce 20
	LPAREN  reduce 20
	SEMI  reduce 20

	Binder  goto 23


state 10
	toplevel : EOF .  (1)

	.  reduce 1


state 11
	ATerm : LPAREN . Term RPAREN  (19)

	UNIT  shift 3
	LET  shift 4
	LAMBDA  shift 5
	IF  shift 6
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 20
	LPAREN  shift 11
	.  error

	Term  goto 24
	AppTerm  goto 15
	ATerm  goto 16


state 12
	%entry% : '\001' toplevel .  (24)

	.  reduce 24


state 13
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 25
	.  error


state 14
	Command : Term .  (3)

	.  reduce 3


state 15
	Term : AppTerm .  (12)
	AppTerm : AppTerm . ATerm  (18)

	UNIT  shift 3
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 20
	LPAREN  shift 11
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAREN  reduce 12
	SEMI  reduce 12

	ATerm  goto 26


state 16
	AppTerm : ATerm .  (17)

	.  reduce 17


state 17
	Term : LET LCID . EQ Term IN Term  (16)

	EQ  shift 27
	.  error


state 18
	Term : LAMBDA LCID . COLON Type DOT Term  (13)

	COLON  shift 28
	.  error


state 19
	Term : LAMBDA USCORE . COLON Type DOT Term  (14)

	COLON  shift 29
	.  error


state 20
	ATerm : LCID .  (20)

	.  reduce 20


state 21
	Term : IF Term . THEN Term ELSE Term  (15)

	THEN  shift 30
	.  error


state 22
	Binder : COLON . Type  (5)

	UUNIT  shift 31
	BOOL  shift 32
	LPAREN  shift 33
	.  error

	Type  goto 34
	ArrowType  goto 35
	AType  goto 36


state 23
	Command : LCID Binder .  (4)

	.  reduce 4


state 24
	ATerm : LPAREN Term . RPAREN  (19)

	RPAREN  shift 37
	.  error


state 25
	toplevel : Command SEMI . toplevel  (2)

	UNIT  shift 3
	LET  shift 4
	LAMBDA  shift 5
	IF  shift 6
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 9
	EOF  shift 10
	LPAREN  shift 11
	.  error

	toplevel  goto 38
	Command  goto 13
	Term  goto 14
	AppTerm  goto 15
	ATerm  goto 16


state 26
	AppTerm : AppTerm ATerm .  (18)

	.  reduce 18


state 27
	Term : LET LCID EQ . Term IN Term  (16)

	UNIT  shift 3
	LET  shift 4
	LAMBDA  shift 5
	IF  shift 6
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 20
	LPAREN  shift 11
	.  error

	Term  goto 39
	AppTerm  goto 15
	ATerm  goto 16


state 28
	Term : LAMBDA LCID COLON . Type DOT Term  (13)

	UUNIT  shift 31
	BOOL  shift 32
	LPAREN  shift 33
	.  error

	Type  goto 40
	ArrowType  goto 35
	AType  goto 36


state 29
	Term : LAMBDA USCORE COLON . Type DOT Term  (14)

	UUNIT  shift 31
	BOOL  shift 32
	LPAREN  shift 33
	.  error

	Type  goto 41
	ArrowType  goto 35
	AType  goto 36


state 30
	Term : IF Term THEN . Term ELSE Term  (15)

	UNIT  shift 3
	LET  shift 4
	LAMBDA  shift 5
	IF  shift 6
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 20
	LPAREN  shift 11
	.  error

	Term  goto 42
	AppTerm  goto 15
	ATerm  goto 16


state 31
	AType : UUNIT .  (9)

	.  reduce 9


state 32
	AType : BOOL .  (8)

	.  reduce 8


state 33
	AType : LPAREN . Type RPAREN  (7)

	UUNIT  shift 31
	BOOL  shift 32
	LPAREN  shift 33
	.  error

	Type  goto 43
	ArrowType  goto 35
	AType  goto 36


state 34
	Binder : COLON Type .  (5)

	.  reduce 5


state 35
	Type : ArrowType .  (6)

	.  reduce 6


state 36
	ArrowType : AType . ARROW ArrowType  (10)
	ArrowType : AType .  (11)

	ARROW  shift 44
	DOT  reduce 11
	RPAREN  reduce 11
	SEMI  reduce 11


state 37
	ATerm : LPAREN Term RPAREN .  (19)

	.  reduce 19


state 38
	toplevel : Command SEMI toplevel .  (2)

	.  reduce 2


state 39
	Term : LET LCID EQ Term . IN Term  (16)

	IN  shift 45
	.  error


state 40
	Term : LAMBDA LCID COLON Type . DOT Term  (13)

	DOT  shift 46
	.  error


state 41
	Term : LAMBDA USCORE COLON Type . DOT Term  (14)

	DOT  shift 47
	.  error


state 42
	Term : IF Term THEN Term . ELSE Term  (15)

	ELSE  shift 48
	.  error


state 43
	AType : LPAREN Type . RPAREN  (7)

	RPAREN  shift 49
	.  error


state 44
	ArrowType : AType ARROW . ArrowType  (10)

	UUNIT  shift 31
	BOOL  shift 32
	LPAREN  shift 33
	.  error

	ArrowType  goto 50
	AType  goto 36


state 45
	Term : LET LCID EQ Term IN . Term  (16)

	UNIT  shift 3
	LET  shift 4
	LAMBDA  shift 5
	IF  shift 6
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 20
	LPAREN  shift 11
	.  error

	Term  goto 51
	AppTerm  goto 15
	ATerm  goto 16


state 46
	Term : LAMBDA LCID COLON Type DOT . Term  (13)

	UNIT  shift 3
	LET  shift 4
	LAMBDA  shift 5
	IF  shift 6
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 20
	LPAREN  shift 11
	.  error

	Term  goto 52
	AppTerm  goto 15
	ATerm  goto 16


state 47
	Term : LAMBDA USCORE COLON Type DOT . Term  (14)

	UNIT  shift 3
	LET  shift 4
	LAMBDA  shift 5
	IF  shift 6
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 20
	LPAREN  shift 11
	.  error

	Term  goto 53
	AppTerm  goto 15
	ATerm  goto 16


state 48
	Term : IF Term THEN Term ELSE . Term  (15)

	UNIT  shift 3
	LET  shift 4
	LAMBDA  shift 5
	IF  shift 6
	TRUE  shift 7
	FALSE  shift 8
	LCID  shift 20
	LPAREN  shift 11
	.  error

	Term  goto 54
	AppTerm  goto 15
	ATerm  goto 16


state 49
	AType : LPAREN Type RPAREN .  (7)

	.  reduce 7


state 50
	ArrowType : AType ARROW ArrowType .  (10)

	.  reduce 10


state 51
	Term : LET LCID EQ Term IN Term .  (16)

	.  reduce 16


state 52
	Term : LAMBDA LCID COLON Type DOT Term .  (13)

	.  reduce 13


state 53
	Term : LAMBDA USCORE COLON Type DOT Term .  (14)

	.  reduce 14


state 54
	Term : IF Term THEN Term ELSE Term .  (15)

	.  reduce 15


56 terminals, 11 nonterminals
25 grammar rules, 55 states
